# GlowEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  make.bat
src/: main.cpp
src/GlowEngine/core/: Application.cpp  Application.hpp
